# flaremail

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: tauri-build.yml
src/: index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  email.rs  lib.rs  main.rs
src/components/: About.tsx  EmailManagement.tsx
src/locales/: zh.ts
src/pages/: Dashboard.tsx
src/utils/: updateChecker.ts
